--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+body{
+     max-width: 1140px;
+}
 .field {
     clear:both;
     text-align:right;
@@ -7,6 +10,3 @@ label {
     padding:10px;}
 .main {
     float: left;}
-.anketa{
-    justify-content: space-around;
-}
