--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,17 @@ label {
     padding:10px;}
 .main {
     float: left;}
+    dialog {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border: solid;
+    padding: 1em;
+    background: white;
+    color: black;
+}
+
 .nav {
     /*  ширна произвольная, не стесняйтесь экспериментировать */
     width: 270px;
