--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,10 @@ body{
     line-height:5px;}
 label {
     float:left;
-    padding:10px;}
+    padding:10px;
+    float:
+    }
+    
 .main {
     float: left;}
 dialog {
